force-app/main/default/objects/Email_Message__b/Email_Message__b.object-meta.xml
<CustomObject>
    <label>Email Message</label>
    <pluralLabel>Email Messages</pluralLabel>
</CustomObject>