force-app/main/default/objects/Email_Message__b/fields/ActivityId__c.field-meta.xml
<CustomField>
    <fullName>ActivityId__c</fullName>
    <label>Activity Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>