force-app/main/default/objects/Email_Message__b/fields/CcAddress__c.field-meta.xml
<CustomField>
    <fullName>CcAddress__c</fullName>
    <label>CC Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>