force-app/main/default/objects/Email_Message__b/fields/ClientThreadIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ClientThreadIdentifier__c</fullName>
    <label>ClientThreadIdentifier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>