force-app/main/default/objects/Email_Message__b/fields/EmailRoutingAddressId__c.field-meta.xml
<CustomField>
    <fullName>EmailRoutingAddressId__c</fullName>
    <label>EmailRoutingAddressId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>