force-app/main/default/objects/Email_Message__b/fields/EmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateId__c</fullName>
    <label>EmailTemplateId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>