force-app/main/default/objects/Email_Message__b/fields/FirstOpenedDate__c.field-meta.xml
<CustomField>
    <fullName>FirstOpenedDate__c</fullName>
    <label>First Opened</label>
    <type>DateTime</type>
</CustomField>