force-app/main/default/objects/Email_Message__b/fields/FromAddress__c.field-meta.xml
<CustomField>
    <fullName>FromAddress__c</fullName>
    <label>From Address</label>
    <type>Email</type>
</CustomField>