force-app/main/default/objects/Email_Message__b/fields/FromId__c.field-meta.xml
<CustomField>
    <fullName>FromId__c</fullName>
    <label>From Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>