force-app/main/default/objects/Email_Message__b/fields/FromName__c.field-meta.xml
<CustomField>
    <fullName>FromName__c</fullName>
    <label>From Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>