force-app/main/default/objects/Email_Message__b/fields/HTMLBody__c.field-meta.xml
<CustomField>
    <fullName>HTMLBody__c</fullName>
    <label>HTML Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>