force-app/main/default/objects/Email_Message__b/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>SF Record ID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>