force-app/main/default/objects/Email_Message__b/fields/Incoming__c.field-meta.xml
<CustomField>
    <fullName>Incoming__c</fullName>
    <label>Is Incoming</label>
    <length>10</length>
    <type>Text</type>
</CustomField>