force-app/main/default/objects/Email_Message__b/fields/IsBounced__c.field-meta.xml
<CustomField>
    <fullName>IsBounced__c</fullName>
    <label>Is Bounced</label>
    <length>10</length>
    <type>Text</type>
</CustomField>