force-app/main/default/objects/Email_Message__b/fields/IsOpened__c.field-meta.xml
<CustomField>
    <fullName>IsOpened__c</fullName>
    <label>Is Opened</label>
    <length>10</length>
    <type>Text</type>
</CustomField>