force-app/main/default/objects/Email_Message__b/fields/IsTracked__c.field-meta.xml
<CustomField>
    <fullName>IsTracked__c</fullName>
    <label>Is Tracked</label>
    <length>10</length>
    <type>Text</type>
</CustomField>