force-app/main/default/objects/Email_Message__b/fields/LastOpenedDate__c.field-meta.xml
<CustomField>
    <fullName>LastOpenedDate__c</fullName>
    <label>Last Opened</label>
    <type>DateTime</type>
</CustomField>