force-app/main/default/objects/Email_Message__b/fields/MessageDate__c.field-meta.xml
<CustomField>
    <fullName>MessageDate__c</fullName>
    <label>Message Date</label>
    <type>DateTime</type>
</CustomField>