force-app/main/default/objects/Email_Message__b/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>