force-app/main/default/objects/Email_Message__b/fields/RelatedToId__c.field-meta.xml
<CustomField>
    <fullName>RelatedToId__c</fullName>
    <label>Related To</label>
    <length>25</length>
    <type>Text</type>
</CustomField>