force-app/main/default/objects/Email_Message__b/fields/ReplyToEmailMessageId__c.field-meta.xml
<CustomField>
    <fullName>ReplyToEmailMessageId__c</fullName>
    <label>ReplyToEmailMessageId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>