force-app/main/default/objects/Email_Message__b/fields/TextBody__c.field-meta.xml
<CustomField>
    <fullName>TextBody__c</fullName>
    <label>Text Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>