force-app/main/default/objects/Email_Message__b/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <label>To Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>